--- a/WebContent/pages/home.xhtml
+++ b/WebContent/pages/home.xhtml
@@ -19,6 +19,12 @@
     <h:panelGrid columns="2" columnClasses="left,right" style="width:100%">
     <p:chart type="line" model="#{chartView.animatedModel1}" style="width:400px;" />
     <p:chart type="bar" model="#{chartView.animatedModel2}" style="width:400px;" />
+    
+    <p:feedReader size="2" value="http://rss.news.yahoo.com/rss/sports" var="feed">
+    <h:outputText value="#{feed.title}" style="font-weight: bold;display:block"/>
+    <h:outputText value="#{feed.description.value}" escape="false"/>
+    <p:separator />
+	</p:feedReader>
 </h:panelGrid>
     
 
